--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.1",
     "express": "^4.18.2",
+    "ng-otp-input": "^1.9.3",
     "ngx-otp-input": "^1.1.1",
     "novoquiosque": "file:",
     "rxjs": "~7.8.0",
